# circt

./: README.md  fib.mlir  format.patch  spmv-after.mlir  test.mlir
extra-tests/: berk.mlir  cartesian.mlir  conv.futil  conv.mlir  doitgen.mlir  fib.mlir  flatten.mlir  foldsign.mlir  if-select-double.mlir  if-select-func.mlir  if-select-sched.mlir  if-select-seq.mlir  if-select.mlir  if-select1.mlir  kernel_count.mlir  matmul-loopschedule.mlir  matmul.mlir  modulo-problems.mlir  reduction-arg.mlir  reduction.mlir  sched.mlir  simple-0.mlir  simple.mlir  spmv-test.mlir  spmv.mlir  test.mlir  test2.mlir  test3.mlir  test_dep.mlir  toy.mlir
frontends/PyCDE/test/: test_esi.py
include/circt/: InitAllDialects.h  InitAllPasses.h
lib/Analysis/: AccessNameAnalysis.cpp  CMakeLists.txt  DependenceAnalysis.cpp  LoopScheduleDependenceAnalysis.cpp  NameAnalysis.cpp  OperatorLibraryAnalysis.cpp  PredicationAnalysis.cpp  SchedulingAnalysis.cpp  TestPasses.cpp
lib/Conversion/: CMakeLists.txt
lib/Dialect/: CMakeLists.txt
lib/Dialect/LoopSchedule/: CMakeLists.txt  LoopScheduleAttributes.cpp  LoopScheduleOps.cpp  Utils.cpp
lib/Dialect/LoopSchedule/Transforms/: BitwidthMinimization.cpp  BitwidthReductionForLoopSchedule.cpp  CMakeLists.txt  ConstructMemoryDependencies.cpp  MarkMemoryAccesses.cpp  PassDetails.h  PipelineForLoopSchedule.cpp  UnrollForLoopSchedule.cpp  UnrollMarkedLoops.cpp  UnrollSubLoops.cpp
lib/Scheduling/: CPSATSchedulers.cpp  ChainingSupport.cpp  ListScheduler.cpp  Problems.cpp  SimplexSchedulers.cpp  Utilities.cpp
lib/Transforms/: ArithStrengthReduction.cpp  CMakeLists.txt  IfOpHoisting.cpp  IndexRemoval.cpp  IndexSwitchToIf.cpp  PassDetail.h  UnrollForLoopSchedule.cpp
test/firtool/: memoryMetadataRenameFail.fir.anno.json
tools/: CMakeLists.txt
tools/circt-opt/: CMakeLists.txt
tools/sched-dump/: CMakeLists.txt  sched-dump.cpp
(+87 files in other folders)
